# RSPB-Birdwatch-Counter

./: README.md  __init__.py  db.sqlite  dbCommands.txt  models.py  pyproject.toml
static/css/: auth.css  build.css  home.css  index.css  main.css  main.old
static/js/: main.js
templates/: base.html  home.html  login.html  signup.html
